# HG

./: NoConstrain.py  Untitled Diagram.drawio  command.sh  eval.py  first oneDiagram.drawio  graph.py  main.py  template.py  test.py  trash.py
ADMM/: OnlyOneProblemequality.py  equality.py  test.py
BFGS/: equalityBFGS.py
C++Parallel/: CMakeLists.txt  main.cpp
C++Parallel/newton/: newton_method.cpp  newton_method.h
CUDAHotSpot/example/: test.cu
CUDAHotSpot/src/: CMakeLists.txt  head.cu  type.cuh
CUDAParallel/example/: CMakeLists.txt  main.cu
CUDAParallel/src/: head.cu  head.cuh  template.py
ConvergenceRateTest/: equality.py
FinalCudaParallel/example/: main.cu  template.cu
FinalCudaParallel/src/: BlockEquality.py  GeneralBlockEquality.py  head.cu  head.cuh  type.cuh
FirstOrder/: Gradientequality.py
GradientTest/: Gradient.py  GradientEquality.py  Jacobian.py  NewtonDescent.py  ProjectGradient.py  RightLagrange.py  equality.py  inequality.py
NoIfElse/example/: CMakeLists.txt  main.cu  template.cu
NoIfElse/src/: DeviceFunction.cu  DeviceFunction.cuh  head.cu  head.cuh
OptimizeSparse/example/: CMakeLists.txt  ChangeStackoverflow.cu  main.cu  template.cu
OptimizeSparse/src/: DeviceFunction.cu  DeviceFunction.cuh  head.cu  head.cuh  type.cuh
Parallel/: 2NewtonMethod.py  NewtonMethod.py  graph.py
Parallel/head/: edge.py  vertex.py
ParallelProfile/: tridiagonal.py
ParallelProfile/head/: trash(central_difference).py
ParallelProfile/solver/: setup.py
Published/example/: CMakeLists.txt  main.cu  stackoverflow.cu  test.cu
Published/src/: CMakeLists.txt  DeviceFunction.cu  DeviceFunction.cuh  head.cu  head.cuh  type.cuh
PythonParallel/: 2NewtonMethod.py  WholeFile.py  test.py
PythonParrallel/: BlockEquality.py  GeneralBlockEquality.py  TestEquality.py  Tools.py  equality.py
SecondOrder/: UpdateDualWrong.py  equality.py  inequality.py  oobstacle.py  template.py  tt.txt
Sparse/: CMakeLists.txt
Sparse/example/: CMakeLists.txt  main.cu  stackoverflow.cu
Sparse/src/: BlockEquality.py  head.cu  type.cuh
TestParallel/: 2NewtonMethod.py  testEquality.py
TestParallel/head/: edge.py  vertex.py
TotalSparse/: CMakeLists.txt
TotalSparse/example/: CMakeLists.txt  main.cu  stackoverflow.cu
TotalSparse/src/: BlockEliminate.py  DeviceFunction.cu  DeviceFunction.cuh  head.cu  head.cuh  type.cuh
UpdatedPublished/example/: main.cu
UpdatedPublished/src/: BlockEliminate.py  DeviceFunction.cu  head.cu  type.cuh
WithoutInverse/: equality.py
casdi/: TimeComparation.txt  comparation.py  computeCost.py  equlity.py  inequalityWhyNotWork.py  obstacle.py  real!!!.py  t_original.py  ttttt.py
experiments/: CMakeLists.txt
experiments/example/: main.cu
experiments/src/: head.cu  template.py
src/: 2NewtonMethod.py  graph.py  test.py  testEquality.py
src/head/: edge.py  vertex.py
